--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="alternate icon" type="image/png" href="/src/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Write interactive and collaborative code notebooks in Elixir.">
-    <title>HiPer Minecraft Launcher(HMCL) - 首款专注于多人联机的Minecraft启动器</title>
+    <title>Hello Minecraft! Launcher(HMCL)</title>
     
     <link href="/src/main.css" rel="stylesheet">
     <link rel="preconnect" href="//fonts.loli.net/" crossorigin="">
@@ -292,7 +292,7 @@
       <div class="m-auto max-w-7xl w-full px-4 py-10 md:py-12 flex flex-col text-sm space-y-5 md:flex-row md:space-y-0 md:items-end md:justify-between">
         <div class="flex flex-col">
           <img src="/src/logo.svg" alt="" width="45" height="45">
-          <span class="mt-2 text-gray-50 text-xl font-semibold">HiPer Minecraft Launcher(HMCL)</span>
+          <span class="mt-2 text-gray-50 text-xl font-semibold">Hello Minecraft! Launcher(HMCL)</span>
           <span class="mt-1 text-gray-300">
             畅快游玩 尽享欢乐<br>
           </span>
