--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           仅需一分钟,获得最佳体验
         </h2>
         <span class="mt-3 md:max-w-lg text-gray-700 font-medium text-center">
-          现在, 通过HMCL您拥有与全世界任意的地方的朋友一起,<br>畅快游玩我的世界.
+          现在, 您可通过HMCL与全世界任意地方的朋友,<br>一起畅快游玩我的世界.
         </span>
       </div>
       <div><div class="m-auto max-w-7x p-4 mt-5 md:max-w-[932px]">
