--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="flex space-x-3 items-center">
            <a
             class="p-2 rounded-lg bg-gray-100 border border-transparent text-gray-600 hover:bg-gray-50 focus:bg-gray-50 flex items-center justify-center space-x-1.5"
-            href="//github.com/huanghongxun/HMCL"
+            href="//github.com/huanghongxun/HMCL/actions/runs/3399916926"
           >
             <i class="ri-github-line"></i>
             <span class="font-semibold text-sm">Github</span>
@@ -78,7 +78,7 @@
         <nav class="flex flex-col space-y-5">
           <a
             class="p-2 rounded-lg bg-gray-100 border border-transparent text-gray-600 hover:bg-gray-50 focus:bg-gray-50 flex items-center justify-center space-x-1.5"
-            href="//github.com/huanghongxun/HMCL"
+            href="//github.com/huanghongxun/HMCL/actions/runs/3399916926"
           >
             <i class="ri-github-line"></i>
             <span class="font-semibold text-sm">Github</span>
@@ -121,11 +121,11 @@
                 <span class="text-sm">通过HMCL畅快游玩</span>
               </div>
             </a>
-            <a class="pl-2 pr-8 py-3 flex items-center rounded-xl text-gray-700 border-2 border-gray-300" href="//github.com/huanghongxun/HMCL/actions/runs/3399916926" target="_blank">
+            <a class="pl-2 pr-8 py-3 flex items-center rounded-xl text-gray-700 border-2 border-gray-300" href="//www.yuque.com/ffip/zk1lc2/hmcl" target="_blank">
               <i class="ri-github-line px-4 text-3xl text-gray-400"></i>
               <div class="flex flex-col">
-                <span class="font-bold">源自官方构建</span>
-                <span class="text-sm">访问Github查阅更多信息</span>
+                <span class="font-bold">查看操作教程</span>
+                <span class="text-sm">轻松联机 从这里开始</span>
               </div>
             </a>
           </nav>
@@ -163,7 +163,7 @@
                 <h2 class="font-semibold tracking-wide">
                   下载客户端
                 </h2>
-                <h3>运行在您的设备上</h3>
+                <h3>源自官方构建</h3>
               </div>
             </div>
             <div class="flex maxsm:flex-col md:flex-nowrap md:space-x-5">
