--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <i class="ri-github-line px-4 text-3xl text-gray-400"></i>
               <div class="flex flex-col">
                 <span class="font-bold">查看操作教程</span>
-                <span class="text-sm">轻松联机 从这里开始</span>
+                <span class="text-sm">畅快游玩 从此开始</span>
               </div>
             </a>
           </nav>
@@ -281,8 +281,7 @@
               <span class="mt-3 md:max-w-lg text-gray-700 font-medium">
                 速聚拥有一个来自全球各地的一流社群(HiPer),
                 大家相互协作。共同构建一个完整的虚拟网络原生世界。
-                您可在启动联机后访问 chat.the.bb 加入社群讨论，
-                或加入我们推荐QQ的群：93364993
+                若您需要帮助或参与建设加入我们推荐的QQ群：93364993
               </span>
             </div>
           </div>
@@ -300,7 +299,7 @@
         <div class="md:hidden w-full border-t border-gray-700"></div>
         <div class="flex flex-col text-gray-200 items-end">
           <span>
-            Copyright 2022 Matrix (HK) LLC. All rights reserved.
+            Copyright 2022 Matrix Networking Lab. All rights reserved.
           </span>
           <span class="mt-2">
             蜀ICP备14009466号-4
